@@ -1,3 +1,15 @@
+2008-01-10  Richard Hult  <richard@imendio.com>
+
+	Merged from trunk:
+
+	* gdk/quartz/gdkwindow-quartz.c: (show_window_internal),
+	(gdk_window_hide), (move_resize_window_internal): Move the
+	tracking rect workaround from here...
+
+	* gdk/quartz/GdkQuartzWindow.c:
+	* gdk/quartz/GdkQuartzWindow.h: ...to here, and ignore window
+	movements during showing/hiding operations. Fixes bug #508516.
+
 2008-01-10  Kristian Rietveld  <kris@imendio.com>
 
 	Merge from trunk:
